# kcp-copilot

./: .gitignore  Dockerfile.agent  KCP-Copilot-Spec.docx  Makefile  README.md  architecture.mermaid  deploy.sh
agent/: go.mod  main.go
agent/server/: gke.go  metrics.go  server.go
k8s/: kcp-agent.yaml
proto/: kcp.proto
tui/: Cargo.toml  build.rs
tui/src/: agent.rs  app.rs  claude.rs  gemini.rs  main.rs  ui.rs
