[package]
name = "kcp-copilot"
version = "0.1.0"
edition = "2021"
description = "AI-powered Kubernetes Control Plane TUI"

[[bin]]
name = "kcp-copilot"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC client
tonic = "0.12"
prost = "0.13"

# HTTP client (Claude API)
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
textwrap = "0.16"

[build-dependencies]
tonic-build = "0.12"
